# KaTie

./: .gitignore  .merlin  .ocamlformat  Makefile  README.md  _tags  dune-project  exec.sh  exec_debug.sh  kappa-tql.opam  kappa-trace-queries.opam  parallel.sh  profile.sh  runtests.py
misc/big-ccs/: README.md  query.katie
misc/wnt-paper/: .gitignore  README.md  all.katie  main.katie  profile_trivial.sh  run.sh  run_parallel.sh  trivial.katie  work.txt
src/: aliases.ml  debug_pp.ml  dump.ml  dune  error.ml  event_matcher.ml  event_matcher.mli  expr.ml  expr_eval.ml  expr_eval.mli  history.ml  history.mli  log.ml  main.ml  matchings.ml  measure.ml  measure.mli  measures.ml  measures.mli  output.ml  output.mli  profile.ml  profile.mli  query.ml  query_ast.ml  query_compile.ml  query_compile.mli  query_eval.ml  query_eval.mli  query_eval.mli.disabled  query_eval_legacy.ml  query_eval_legacy.mli  query_evaluator.ml  query_lexer.mll  query_parser.mly  safe_replay.ml  safe_replay.mli  sanity_checks.ml  sanity_checks.mli  streaming.ml  (+10 more)
tests/catphos/: Makefile  average.py  catphos.ka  query
tests/errors/: model.ka  query.katie
tests/large/big-ccs/: model.ka
tests/large/catphos/: query.katie
tests/large/catphos/expected/results/: analyze_cycles.csv  first_phos.csv  lifespan_unphos.csv  lifespan_variant_2.csv  lifespan_variant_3.csv
tests/large/wnt/: model.ka  query.katie
tests/large/wnt-causal-fork/: ReadMe.md  model.ka  query.katie  validate_katie.py
tests/large/wnt-causal-fork/expected/results/: query_out_kinase_complex_characterization.csv
tests/large/wnt/expected/results/: component_size.csv  undo_S33.csv  undo_S37.csv  undo_S45.csv  undo_T41.csv  wait_times.csv
tests/misc/ambiguous/: model.ka  query.katie
tests/misc/unsound/: model.ka  query.katie
tests/unit/add-rem-alt/: model.ka  query.katie
tests/unit/bind-add-rem/: model.ka  query.katie
tests/unit/cascade/: model.ka  query.katie
tests/unit/catphos-mini/: model.ka  query.katie
tests/unit/creation-deletion/: model.ka  query.katie
tests/unit/double-phos/: model.ka  query.katie
tests/unit/expr-basic/: model.ka  query.katie
tests/unit/expr-basic/expected/: expr-basic.csv
tests/unit/match-advanced/: model.ka  query.katie
tests/unit/match-basic/: model.ka  query.katie
tests/unit/measure_rule/: readme.md
tests/unit/measure_rule/collision/: model.ka  query.katie
tests/unit/measure_rule/notation_chemical_name_overload/: model.ka
tests/unit/measure_rule/notation_chemical_unnamed/: model.ka  query.katie
tests/unit/measure_rule/notation_edit_name_overload/: model.ka
tests/unit/measure_rule/notation_edit_unnamed/: model.ka
tests/unit/measure_sim_event_id/: ReadMe.md  model.ka  query.katie
tests/unit/quote_consistency/: ReadMe.md  model.ka  query.katie
tests/unit/side-effects/: model.ka  query.katie
tests/unit/tokens_in_snapshots/: model.ka  query.katie
tests/unit/unbind_matches_degradation/: model.ka  query.katie
tests/wnt/: Makefile
(+13 files in other folders)
