(executable
  (name main)
  (public_name KaTie)
  (package kappa-tql)
  (libraries
    kappa-library.generic
    kappa-library.runtime
    kappa-library.terms
    kappa-library.mixtures
    ANSITerminal)
  (flags (:standard
    -open Kappa_generic_toolset
    -open Kappa_mixtures
    -open Kappa_terms
    -open Kappa_runtime)))

(menhir
  (modules query_parser)
  (flags --explain))

(ocamllex query_lexer)